Bug 173882 - can't set splitter orientation
Summary: can't set splitter orientation
Status: RESOLVED FIXED
Alias: None
Product: koffice
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-30 07:35 UTC by Elián Hanisch
Modified: 2008-10-31 22:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2008-10-30 07:35:42 UTC
Version:           svn trunk (using KDE 4.1.2)
Compiler:          gcc (GCC) 4.2.4 (Ubuntu 4.2.4-1ubuntu3)
 
OS:                Linux
Installed from:    Ubuntu Packages

the splitter orientation submenu in the view menu is non functional, selecting either horizontal or vertical changes nothing.
Comment 1 Jan Hambrecht 2008-10-31 22:39:00 UTC
SVN commit 878315 by jaham:

fix changing split view orientation

BUG:173882



 M  +4 -5      KoMainWindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=878315