fix changing split view orientation

BUG:173882


svn path=/trunk/koffice/; revision=878315